#1039-Code clean up for the Main page. Fixes the alignment of the Header image.

--- a/web/assets/css/gazette.css
+++ b/web/assets/css/gazette.css
@@ -2,12 +2,16 @@ body, tr, td, p, li {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 9pt;
 	color: #000000;
+	vertical-align: top;
 }
 
-
+body {
+	background: url("/assets/img/paper_tile_new.jpg");
+	margin: 0;
+}
 
 .story {
-    border:1px solid ;
+    //border:1px solid ;
     border-color: black;
 }
 
@@ -97,37 +101,45 @@ body, tr, td, p, li {
 }
 
 .paperwhite {
+	background-color: #333333;
+	font-family: Times New Roman;
+	font-size: 8pt;
 	color: #FFFFFF;
+}
+
+.contentpagetitle {
+	text-align: center;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
 
 
-
-
-#bodyDiv {
-			position: absolute;
-			background-image: url("paper_tile_new.jpg");
-			height: 100%;
-			width: 940px;
-
-		}
+#top {
+	position: absolute;
+	height: 100%;
+	width: 940px;
+}
 
 #headerMiddle {
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-		}
+	height: 90px;
+	width: 940px; 
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 #alliedDeaths {
-			position: absolute;
-			width: 150px;
-			top: 3px;
-			left: 5px;
-			border: 1px solid black;
-			font-family: Georgia, Times New Roman, Times, serif; 
-			font-size: 8pt;
-		}
+	position: absolute;
+	width: 150px;
+	top: 3px;
+	left: 5px;
+	border: 1px solid black;
+	font-family: Georgia, Times New Roman, Times, serif; 
+	font-size: 8pt;
+}
 
 #axisDeaths {
     position: absolute;
@@ -146,8 +158,52 @@ body, tr, td, p, li {
             height: 100%;
 			width: 940px;
             color:black;
-            }
+}
 
 #override {
     color: black !important;
+}
+
+#topLeftStory {
+	height: 175px;
+	width: 188px;
+	text-align: center;
+	border-right: 1px black solid;
+	padding: 5px;
+}
+
+#mapText {
+	display:block; 
+	width: 564px; 
+	text-align: center; 
+	margin-top: -3px;
+}
+
+#topRightStory {
+	width: 188px;
+	text-align: center;
+	border-left: 1px black solid;
+}
+
+#middleTopLeft {
+}
+
+#poster{
+	 height: 210px;
+	 display: block;
+	 margin-left: auto;
+	 margin-right: auto;
+}
+
+#middleTopRightStory {
+	width: 188px;
+	text-align: center;
+}
+
+#middleBottomLeftStory {
+	height: 175px;
+	width: 188px;
+	text-align: center;
+	border-right: 1px black solid;
+	padding: 5px;
 }
